# Lxt_dash

lxt_dash/: README.md  db_script.py  employee.db  insert_resultats.sql  insert_resultats_journaliers.sql  login.py  lxt_dash.py  lxt_dash2.py  pyproject.toml  transcripteur.csv
lxt_dash/pages/: bi.py  hr.py  quality.py  visio.py
