[project]
name = "lxt-dash"
version = "0.1.0"
description = ""
authors = [
    {name = "Orestil, Dudley",email = "da191212@ens.uqam.ca"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash (>=3.1.1,<4.0.0)",
    "dash-ag-grid (>=31.3.1,<32.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "plotly (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
